--- a/lesson8/css/style.css
+++ b/lesson8/css/style.css
@@ -33,12 +33,9 @@ header p {
  }
 
 .icon {
-    text-align: center;
+    position: absolute;
+    left: 50%;
 }
-
-/*article {
-    margin: 120px 490px;
-}*/
 
 article p {
     padding: 30px 10px;
