--- a/lesson16/css/style.css
+++ b/lesson16/css/style.css
@@ -1,5 +1,4 @@
 * {
-    font-family: Arial,sans-serif;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -7,78 +6,54 @@
 body, html {
     height: 100%;
 }
-body{
-    background: linear-gradient(to bottom left,#dd2476,#ff512f);
-    background-size: cover;
-}
 
-.form {
-    background-color: #ffffff;
-    border-radius: 5px;
-    margin: 60px auto 70px;
-    max-width: 460px;
+.ba-container {
+    max-width: 1200px;
+    margin: 100px auto;
     padding: 30px;
+}
 
-}
-i {
-    font-size: 24px;
-    color: #df2671;
-    padding: 0 7px 0 0;
-}
 h1 {
-    font-size: 24px;
+    font-size: 3vw;
+}
 
-    color: #000000;
+.clearfix {
+    content: "";
+    display: table;
+    clear: both;
 }
-p {
-    font-size: 13px;
-    color: #7a7b7f;
+
+img {
+    display: block;
+    max-width: 100%;
 }
-a {
-    text-decoration: none;
-    color: #ea355a;
+
+.ba-row > [class*='ba-width-'] {
+    float: left;
+    padding-left: 20px;
 }
-.name {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin: 0;
+
+.ba-row {
+    margin-left: -20px;
 }
-.fname {
-    background-color: #f0f0f0;
-    margin: 40px 15px 10px 0;
-    padding: 10px;
-    border: 0px;
-    border-radius: 3px;
-    width: 48%;
+
+.ba-row + .ba-row {
+    margin-top: 20px;
 }
-.lname {
-    background-color: #f0f0f0;
-    margin: 40px 0 10px;
-    padding: 10px;
-    border: 0px;
-    border-radius: 3px;
-    width: 48%;
+
+[class*="ba-width-"]{
+    width: 100%;
 }
-.mail {
-    display: flex;
-    flex-direction: column;
-    }
-.mail input:nth-child(-n+2) {
-    background-color: #f0f0f0;
-    margin: 10px 0;
-    padding: 10px;
-    border: 0px;
-    border-radius: 3px;
+
+.ba-width-1-2 {
+    width: 50%;
 }
-.mail input:nth-child(3) {
-    background-color: #ea355a;
-    font-weight: bold;
-    font-size: 18px;
-    margin: 10px 0 120px;
-    padding: 15px;
-    border: 0px;
-    border-radius: 3px;
-    color: #ffffff;
+
+.ba-width-1-3 {
+    width: 33.3333%;
+}
+
+.ba-width-1-6{
+    width: 16.6666%;
 }
 
